# python-wsmanclient

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: client-api.rst  conf.py  index.rst  usage.rst
tools/: tox_install.sh
wsmanclient/: __init__.py  client.py  exceptions.py  version.py
wsmanclient/tests/: test_client.py  test_wsmanclient.py
