[metadata]
name = python-wsmanclient
summary = Python client that speaks Web Services-Management protocol
description-file = README.rst
maintainer = Imre Farkas
maintainer_email = ifarkas@redhat.com
home-page = https://launchpad.net/python-wsmanclient
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    wsmanclient

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
